--- a/conf.gradle
+++ b/conf.gradle
@@ -3,7 +3,7 @@ ext {
     android = [
             compileSdkVersion: 27,
 
-            minSdkVersion    : 15,
+            minSdkVersion    : 19,
             targetSdkVersion : 26,
 
             versionCode      : 1,
@@ -48,7 +48,9 @@ ext {
             "canary-release"             : "com.squareup.leakcanary:leakcanary-android-no-op:1.6.1",
             "canary-fragment"            : "com.squareup.leakcanary:leakcanary-support-fragment:1.6.1",
 
-            "lottie"                     : "com.airbnb.android:lottie:2.3.0"
+            "lottie"                     : "com.airbnb.android:lottie:2.3.0",
+            "BaseAdapterHelper"          : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34",
+            "EasyRefreshLayout"         : "com.github.anzaizai:EasyRefreshLayout:1.3.1",
     ]
 
 }
