1. 完善首页模块的功能 2. 新增分类标签页面、分类列表页面和文章详情页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation rootProject.ext.dependencies["lottie"]
     implementation rootProject.ext.dependencies["BaseAdapterHelper"]
     implementation rootProject.ext.dependencies["EasyRefreshLayout"]
+    implementation rootProject.ext.dependencies["flowlayout"]
+    implementation rootProject.ext.dependencies["agentweb"]
 
     //内存泄漏检测
     debugImplementation rootProject.ext.dependencies["canary-debug"]
