--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.haobin.watermelon_all_summer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -24,6 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".module.main.MainActivity"/>
+        <activity android:name=".module.home.view.ArticleListActivity"/>
+        <activity android:name=".module.home.view.ArticleDetailActivity"/>
     </application>
 
 </manifest>
