--- a/conf.gradle
+++ b/conf.gradle
@@ -50,7 +50,10 @@ ext {
 
             "lottie"                     : "com.airbnb.android:lottie:2.3.0",
             "BaseAdapterHelper"          : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34",
-            "EasyRefreshLayout"         : "com.github.anzaizai:EasyRefreshLayout:1.3.1",
+            "EasyRefreshLayout"          : "com.github.anzaizai:EasyRefreshLayout:1.3.1",
+            "flowlayout"                 : "com.hyman:flowlayout-lib:1.1.2",
+
+            "agentweb"                 : "com.just.agentweb:agentweb:4.0.2",
     ]
 
 }
