1. 初步完成福利模块的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".module.main.MainActivity"/>
         <activity android:name=".module.home.view.ArticleListActivity"/>
-        <activity android:name=".module.home.view.ArticleDetailActivity"/>
+        <activity android:name=".module.main.WebDetailActivity"/>
     </application>
 
 </manifest>
