完善一下精美图片的布局和效果

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     debugImplementation rootProject.ext.dependencies["canary-debug"]
     releaseImplementation rootProject.ext.dependencies["canary-release"]
     debugImplementation rootProject.ext.dependencies["canary-fragment"]
+
+    implementation rootProject.ext.dependencies["cardview-v7"]
     
     implementation project(":mvp")
 }
