--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name="com.haobin.watermelon_all_summer.module.main.SplashActivity">
+        <activity android:name="com.haobin.watermelon_all_summer.module.main.view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.main.MainActivity"/>
+        <activity android:name=".module.main.view.MainActivity"/>
         <activity android:name=".module.home.view.ArticleListActivity"/>
-        <activity android:name=".module.main.WebDetailActivity"/>
+        <activity android:name=".module.main.view.WebDetailActivity"/>
+        <activity android:name=".module.main.view.SettingActivity"
+            android:launchMode="singleInstance"/>
     </application>
 
 </manifest>
