--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,17 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name="com.haobin.watermelon_all_summer.module.main.view.SplashActivity">
+        <activity android:name="com.haobin.watermelon_all_summer.module.main.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.main.view.MainActivity"/>
+        <activity android:name=".module.main.MainActivity"/>
         <activity android:name=".module.home.view.ArticleListActivity"/>
-        <activity android:name=".module.main.view.WebDetailActivity"/>
-        <activity android:name=".module.main.view.SettingActivity"
+        <activity android:name=".module.main.WebDetailActivity"/>
+        <activity android:name=".module.main.SettingActivity"
             android:launchMode="singleInstance"/>
     </application>
 
