--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,18 @@ android {
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    android{
+        aaptOptions.cruncherEnabled = false
+        aaptOptions.useNewCruncher = false
     }
 }
 
@@ -36,5 +42,7 @@ dependencies {
     
     implementation project(":mvp")
 
-    api 'com.github.adonggit:CasePackage:1.73'
+    api 'com.github.adonggit:CasePackage:1.74'
+
+    api 'com.android.support:multidex:1.0.3'
 }
